--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-spinners": "^0.13.8"
+    "react-spinners": "^0.13.8",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
